test/expected/explain_af-c.out
explain auto f()
        ^
9: error: "auto" return type not supported in C
